@@ -7,7 +7,7 @@ bill@newbreedsoftware.com
 http://www.newbreedsoftware.com/tuxpaint/
 
 
-2003.Jun.29 (0.9.12) [cvs]
+2003.Jul.3 (0.9.12) [cvs]
   * Fixed Mac OS X #include typo.
     Darrell Walisser <walisser@mac.com>
 
@@ -17,6 +17,9 @@ http://www.newbreedsoftware.com/tuxpaint/
   
   * French translation update.
     Jacques Chion <Jacques.Chion@wanadoo.fr>
+
+  * Added call to close iconv when quitting.
+    John Popplewell <john@johnnypops.demon.co.uk>
 
 
 2003.Jun.17 (0.9.11)
